syntax = "proto3";
package types;
option go_package = "github.com/sacloud/libsacloud/v2/grpc/sacloud/types";

enum AuthClass {
  AUTH_CLASS_UNSPECIFIED = 0;
  AUTH_CLASS_ACCOUNT = 1;
}

enum AuthMethod {
  AUTH_METHOD_UNSPECIFIED = 0;
  AUTH_METHOD_API_KEY = 1;
}

enum Availability {
  AVAILABILITY_UNSPECIFIED = 0;
  AVAILABILITY_AVAILABLE = 1;
  AVAILABILITY_UPLOADING = 2;
  AVAILABILITY_FAILED = 3;
  AVAILABILITY_MIGRATING = 4;
  AVAILABILITY_TRANSFERRING = 5;
  AVAILABILITY_DISCONTINUED = 6;
}

enum BackupSpanType {
  BACKUP_SPAN_TYPE_UNSPECIFIED = 0;
  BACKUP_SPAN_TYPE_WEEKDAYS = 1;
}

enum BackupSpanWeekday {
  BACKUP_SPAN_WEEKDAY_UNSPECIFIED = 0;
  BACKUP_SPAN_WEEKDAY_SUNDAY = 1;
  BACKUP_SPAN_WEEKDAY_MONDAY = 2;
  BACKUP_SPAN_WEEKDAY_TUESDAY = 3;
  BACKUP_SPAN_WEEKDAY_WEDNESDAY = 4;
  BACKUP_SPAN_WEEKDAY_THURSDAY = 5;
  BACKUP_SPAN_WEEKDAY_FRIDAY = 6;
  BACKUP_SPAN_WEEKDAY_SATURDAY = 7;
}

enum Commitment {
  COMMITMENT_UNSPECIFIED = 0;
  COMMITMENT_STANDARD = 1;
  COMMITMENT_DEDICATED_CPU = 2;
}

enum ContainerRegistryAccessLevel {
  CONTAINER_REGISTRY_ACCESS_LEVEL_UNSPECIFIED = 0;
  CONTAINER_REGISTRY_ACCESS_LEVEL_READ_WRITE = 1;
  CONTAINER_REGISTRY_ACCESS_LEVEL_READ_ONLY = 2;
  CONTAINER_REGISTRY_ACCESS_LEVEL_NONE = 3;
}

enum ContainerRegistryPermission {
  CONTAINER_REGISTRY_PERMISSION_UNSPECIFIED = 0;
  CONTAINER_REGISTRY_PERMISSION_READ_WRITE = 1;
  CONTAINER_REGISTRY_PERMISSION_READ_ONLY = 2;
  CONTAINER_REGISTRY_PERMISSION_ALL = 3;
}

enum DNSRecordType {
  DNS_RECORD_TYPE_UNSPECIFIED = 0;
  DNS_RECORD_TYPE_A = 1;
  DNS_RECORD_TYPE_AAAA = 2;
  DNS_RECORD_TYPE_ALIAS = 3;
  DNS_RECORD_TYPE_CNAME = 4;
  DNS_RECORD_TYPE_NS = 5;
  DNS_RECORD_TYPE_MX = 6;
  DNS_RECORD_TYPE_TXT = 7;
  DNS_RECORD_TYPE_SRV = 8;
  DNS_RECORD_TYPE_CAA = 9;
  DNS_RECORD_TYPE_PTR = 10;
}

enum DatabasePlan {
  DATABASE_PLAN_UNSPECIFIED = 0;
  DATABASE_PLAN_10GB = 1;
  DATABASE_PLAN_30GB = 2;
  DATABASE_PLAN_90GB = 3;
  DATABASE_PLAN_240GB = 4;
  DATABASE_PLAN_500GB = 5;
  DATABASE_PLAN_1TB = 6;
}

enum DatabaseReplicationModel {
  DATABASE_REPLICATION_MODEL_UNSPECIFIED = 0;
  DATABASE_REPLICATION_MODEL_MASTER_SLAVE = 1;
  DATABASE_REPLICATION_MODEL_ASYNC_REPLICA = 2;
}

enum DiskConnection {
  DISK_CONNECTION_UNSPECIFIED = 0;
  DISK_CONNECTION_VIRT_IO = 1;
  DISK_CONNECTION_IDE = 2;
}

enum DiskPlan {
  DISK_PLAN_UNSPECIFIED = 0;
  DISK_PLAN_SSD = 1;
  DISK_PLAN_HDD = 2;
}

enum GSLBHealthCheckProtocols {
  GSLB_HEALTH_CHECKK_PROTOCOL_UNSPECIFIED = 0;
  GSLB_HEALTH_CHECKK_PROTOCOL_HTTP = 1;
  GSLB_HEALTH_CHECKK_PROTOCOL_HTTPS = 2;
  GSLB_HEALTH_CHECKK_PROTOCOL_TCP = 3;
  GSLB_HEALTH_CHECKK_PROTOCOL_PING = 4;
}

enum InterfaceDriver {
  INTERFACE_DRIVER_UNSPECIFIED = 0;
  INTERFACE_DRIVER_VIRT_IO = 1;
  INTERFACE_DRIVER_E1000 = 2;
}

enum LoadBalancerHealthCheckProtocol {
  LOAD_BALANCER_HEALTH_CHECK_PROTOCOL_UNSPECIFIED = 0;
  LOAD_BALANCER_HEALTH_CHECK_PROTOCOL_HTTP = 1;
  LOAD_BALANCER_HEALTH_CHECK_PROTOCOL_HTTPS = 2;
  LOAD_BALANCER_HEALTH_CHECK_PROTOCOL_TCP = 3;
  LOAD_BALANCER_HEALTH_CHECK_PROTOCOL_PING = 4;
}

enum LoadBalancerPlan {
  LOAD_BALANCER_PLAN_UNSPECIFIED = 0;
  LOAD_BALANCER_PLAN_STANDARD = 1;
  LOAD_BALANCER_PLAN_HIGH_SPEC = 2;
}

enum NFSHDDSize {
  NFS_HDD_SIZE_UNSPECIFIED = 0;
  NFS_HDD_SIZE_100GB = 1;
  NFS_HDD_SIZE_500GB = 2;
  NFS_HDD_SIZE_1TB = 3;
  NFS_HDD_SIZE_2TB = 4;
  NFS_HDD_SIZE_4TB = 5;
  NFS_HDD_SIZE_8TB = 6;
  NFS_HDD_SIZE_12TB = 7;
}

enum NFSPlan {
  NFS_PLAN_UNSPECIFIED = 0;
  NFS_PLAN_HDD = 1;
  NFS_PLAN_SSD = 2;
}

enum NFSSSDSize {
  NFS_SSD_SIZE_UNSPECIFIED = 0;
  NFS_SSD_SIZE_20GB = 1;
  NFS_SSD_SIZE_100GB = 2;
  NFS_SSD_SIZE_500GB = 3;
  NFS_SSD_SIZE_1TB = 4;
  NFS_SSD_SIZE_2TB = 5;
  NFS_SSD_SIZE_4TB = 6;
}

enum OperationPenaltie {
  OPERATION_PENALTIE_UNSPECIFIED = 0;
  OPERATION_PENALTIE_NONE = 1;
}

enum APIKeyPermission {
  API_KEY_PERMISSION_UNSPECIFIED = 0;
  API_KEY_PERMISSION_CREATE = 1;
  API_KEY_PERMISSION_ARRANGE = 2;
  API_KEY_PERMISSION_POWER = 3;
  API_KEY_PERMISSION_VIEW = 4;
}

enum PlanGeneration {
  PLAN_GENERATION_UNSPECIFIED = 0;
  PLAN_GENERATION_G100 = 1;
  PLAN_GENERATION_G200 = 2;
}

enum ProxyLBPlan {
  PROXY_LB_PLAN_UNSPECIFIED = 0;
  PROXY_LB_PLAN_CPS100 = 1;
  PROXY_LB_PLAN_CPS500 = 2;
  PROXY_LB_PLAN_CPS1000 = 3;
  PROXY_LB_PLAN_CPS5000 = 4;
  PROXY_LB_PLAN_CPS10000 = 5;
  PROXY_LB_PLAN_CPS50000 = 6;
  PROXY_LB_PLAN_CPS100000 = 7;
}

enum ProxyLBProtocol {
  PROXY_LB_PROTOCOL_UNSPECIFIED = 0;
  PROXY_LB_PROTOCOL_HTTP = 1;
  PROXY_LB_PROTOCOL_TCP = 2;
}

enum ProxyLBProxyMode {
  PROXY_LB_PROXY_MODE_UNSPECIFIED = 0;
  PROXY_LB_PROXY_MODE_HTTP = 1;
  PROXY_LB_PROXY_MODE_HTTPS = 2;
  PROXY_LB_PROXY_MODE_TCP = 3;
}

enum ProxyLBRegion {
  PROXY_LB_REGION_UNSPECIFIED = 0;
  PROXY_LB_REGION_TK1 = 1;
  PROXY_LB_REGION_IS1 = 2;
}

enum Scope {
  SCOPE_UNSPECIFIED = 0;
  SCOPE_SHARED = 1;
  SCOPE_USER = 2;
}

enum SIMOperator {
  SIM_OPERATOR_UNSPECIFIED = 0;
  SIM_OPERATOR_KDDI = 1;
  SIM_OPERATOR_DOCOMO = 2;
  SIM_OPERATOR_SOFTBANK = 3;
}

enum SimpleMonitorProtocol {
  SIMPLE_MONITOR_PROTOCOL_UNSPECIFIED = 0;
  SIMPLE_MONITOR_PROTOCOL_HTTP = 1;
  SIMPLE_MONITOR_PROTOCOL_HTTPS = 2;
  SIMPLE_MONITOR_PROTOCOL_PING = 3;
  SIMPLE_MONITOR_PROTOCOL_TCP = 4;
  SIMPLE_MONITOR_PROTOCOL_DNS = 5;
  SIMPLE_MONITOR_PROTOCOL_SSH = 6;
  SIMPLE_MONITOR_PROTOCOL_SMTP = 7;
  SIMPLE_MONITOR_PROTOCOL_POP3 = 8;
  SIMPLE_MONITOR_PROTOCOL_SNMP = 9;
  SIMPLE_MONITOR_PROTOCOL_SSL_CERTIFICATE = 10;
}

enum VPCRouterFirewallProtocol {
  VPC_ROUTER_FIREWALL_PROTOCOL_UNSPECIFIED = 0;
  VPC_ROUTER_FIREWALL_PROTOCOL_TCP = 1;
  VPC_ROUTER_FIREWALL_PROTOCOL_UDP = 2;
  VPC_ROUTER_FIREWALL_PROTOCOL_ICMP = 3;
  VPC_ROUTER_FIREWALL_PROTOCOL_IP = 4;
}

enum VPCRouterPlan {
  VPC_ROUTER_PLAN_UNSPECIFIED = 0;
  VPC_ROUTER_PLAN_STANDARD = 1;
  VPC_ROUTER_PLAN_PREMIUM = 2;
  VPC_ROUTER_PLAN_HIGH_SPEC = 3;
  VPC_ROUTER_PLAN_HIGH_SPEC_4000 = 4;
}

enum VPCRouterPortForwardingProtocol {
  VPC_ROUTER_PORT_FORWARDING_PROTOCOL_UNSPECIFIED = 0;
  VPC_ROUTER_PORT_FORWARDING_PROTOCOL_TCP = 1;
  VPC_ROUTER_PORT_FORWARDING_PROTOCOL_UDP = 2;
}

enum WebAccelDomainType {
  WEB_ACCEL_DOMAIN_TYPE_UNSPECIFIED = 0;
  WEB_ACCEL_DOMAIN_TYPE_OWN = 1;
  WEB_ACCEL_DOMAIN_TYPE_SUB_DOMAIN = 2;
}
